--- a/src/app/ui/components/product/product-detail/product-detail.component.scss
+++ b/src/app/ui/components/product/product-detail/product-detail.component.scss
@@ -1,11 +1,16 @@
+$home-primary-color: #333333;
+$home-secondary-color: #f0f0f0;
+$accent-color: #ff9900;
+$home-text-color: #333;
+$light-text: #fff;
 $primary-color: #e53935;
 $secondary-color: #212121;
 $background-color: #ffffff;
 $text-color: #484848;
 $border-color: #e0e0e0;
 $hover-color: rgba($primary-color, 0.1);
-$success-color: #00a046;
-$link-color: #0000EE;
+$success-color: #059669;
+$link-color: #0000ee;
 
 .breadcrumb{
   display: flex;
