--- a/src/app/ui/components/brand/brand.component.scss
+++ b/src/app/ui/components/brand/brand.component.scss
@@ -1,5 +1,5 @@
 :root {
-  --primary: #003366;
+  --primary: #333333;
   --secondary: #f0f0f0;
   --accent: #ff9900;
   --text-dark: #333;
@@ -9,7 +9,7 @@
   --brand-primary: #e53935;
 }
 
-$home-primary-color: #003366;
+$home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
 $home-text-color: #333;
@@ -20,6 +20,9 @@ $background-color: #ffffff;
 $text-color: #484848;
 $border-color: #e0e0e0;
 $hover-color: rgba($primary-color, 0.1);
+$success-color: #059669;
+$link-color: #0000ee;
+
 
 /* Brand Banner Styles */
 .brand-banner {
