--- a/src/app/ui/components/category/category.component.scss
+++ b/src/app/ui/components/category/category.component.scss
@@ -1,4 +1,4 @@
-$home-primary-color: #003366;
+$home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
 $home-text-color: #333;
@@ -9,7 +9,7 @@ $background-color: #ffffff;
 $text-color: #484848;
 $border-color: #e0e0e0;
 $hover-color: rgba($primary-color, 0.1);
-$success-color: #00a046;
+$success-color: #059669;
 $link-color: #0000ee;
 
 .breadcrumb {
@@ -61,12 +61,7 @@ $link-color: #0000ee;
       left: 0px;
       width: 100px;
       height: 4px;
-      background-image: linear-gradient(
-          to bottom,
-          rgba(12, 108, 212, 0),
-          rgba(35, 41, 50, 0.15) 37%
-        ),
-        linear-gradient(to bottom, #e53935, #e53935);
+      background-image: linear-gradient(to bottom, rgba(12, 108, 212, 0), rgba(35, 41, 50, 0.15) 37%), linear-gradient(to bottom, #0066cc, #0066cc);
     }
   }
 
