--- a/src/app/ui/components/main-header/main-header.component.scss
+++ b/src/app/ui/components/main-header/main-header.component.scss
@@ -3,15 +3,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 // Variables
-$home-primary-color: #003366;
+$home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
 $home-text-color: #333;
-$light-text: #fff;
+$light-text: #e0e0e0;
+$dark-text: #3333;
 $primary-color: #e53935;
 $secondary-color: #212121;
 $background-color: #ffffff;
-$text-color: #484848;
+$text-color: #949494;
 $border-color: #e0e0e0;
 $hover-color: rgba($primary-color, 0.1);
 $success-color: #059669;
@@ -48,16 +49,86 @@ $breakpoint-large: 1400px;
 }
 
 .main-header {
-  max-width: 1320px;
-  margin: 10px auto;
-  background-color: white;
+  
+  margin: 0 0 0 auto;
+  background-color: $home-primary-color;
   position: relative;
   transition: all 0.3s ease;
+  overflow: hidden; // Ensure the pseudo-element stays within the bounds of the header
+  @media (max-width: 1023px) {
+   background-color: $light-text;
+    
+  }
+
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0px; // Position it just below the header
+    width: 100%;
+    height: 10px; // Thickness of the bar
+    background: #8d1515; /* linear-gradient(to right, #c50603 40%, #333333 60%); */
+    @media (max-width: 1023px) {
+     display: none;
+    }
+  }
+  
 
   .container {
     margin: 10px auto;
     padding: 0 15px;
+    position: relative;
+    z-index: 1; //
+
+    &::before{
+      content: "";
+      display: block;
+      background-color: #e0e0e0;
+      width: 100vw;
+      top: 0;
+      bottom: 0px;
+      position: absolute;
+      right: 47%;
+      height: 144%;
+      transform: skew(-20deg);
+      transform-origin: bottom right;
+      border-right: 1px solid #e6e6e6;
+
+    @media (max-width: 1023px) {
+      display: none;
+    
+    }
   }
+  }
+
+  &::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 10px; // Thickness of the bar
+    background: #8d1515; /* linear-gradient(to right, #c50603 40%, #333333 60%); */
+    @media (max-width: 1023px) {
+     display: none;
+    }
+    
+  }
+  /* &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 50%; // Adjust width as necessary
+    height: 100%;
+    background-color: #333333;
+    clip-path: polygon(10% 0, 100% 0, 100% 100%, 0% 100%); // Creates a diagonal cut
+    z-index: 0; // Places it below the content
+    @media (max-width: 767px) {
+      display: none;
+    }
+  } */
 
   .header-content {
     display: flex;
@@ -65,12 +136,16 @@ $breakpoint-large: 1400px;
     align-items: center;
     flex-wrap: wrap;
     gap: 1rem;
+    position: relative;
+    padding-top: 15px;
+    
   }
 
   .logo {
     display: flex;
     align-items: center;
-    gap: 1rem;
+    //gap: 1rem;
+
 
     .logo-image {
       width: 270px;
@@ -91,11 +166,15 @@ $breakpoint-large: 1400px;
     align-items: center;
     gap: 1rem;
     flex-wrap: wrap;
+    //margin: auto;
+    @media (max-width: 1023px) {
+      display: none;
+    }
 
     .btn {
       @include button-style;
       white-space: nowrap;
-      color: #003366;
+      color: $border-color;
       
       i {
         margin-right: 0.5rem;
@@ -143,7 +222,7 @@ $breakpoint-large: 1400px;
       position: relative;
       transition: all 0.3s ease;
       animation: pulse 2s infinite;
-      color: $text-color; // Varsayılan renk
+      color: $border-color; 
   
       &.has-items {
         color: $success-color; // Sepette ürün varken renk
@@ -158,7 +237,7 @@ $breakpoint-large: 1400px;
         position: absolute;
         top: -1px;
         right: 65px;
-        background-color: $text-color; // Varsayılan badge rengi
+        background-color: $border-color; // Varsayılan badge rengi
         color: white;
         border-radius: 50%;
         min-width: 20px;
@@ -261,7 +340,7 @@ $breakpoint-large: 1400px;
 @media (max-width: 991px) {
   .main-header {
     height: auto;
-    padding: 1rem 0;
+    //padding: 1rem 0;
 
     .header-content {
       flex-wrap: wrap;
@@ -317,7 +396,7 @@ $breakpoint-large: 1400px;
 // Mobil ekranlar (767px ve altı)
 @media (max-width: 767px) {
   .main-header {
-    margin: 5px auto;
+   // margin: 5px auto;
 
     .container {
       margin: 5px auto;
