--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 // Variables
-$home-primary-color: #003366;
+$home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
 $home-text-color: #333;
@@ -23,7 +23,7 @@ $breakpoint-desktop: 1200px;
 $breakpoint-large: 1400px;
 
 .navbar-container {
-  background: #003366;
+  background: linear-gradient(to bottom, #333333, rgba(51, 51, 51, .4) 98%), linear-gradient(to bottom, #202020, #202020);
   height: 64px;
   width: 100%;
 
@@ -33,7 +33,7 @@ $breakpoint-large: 1400px;
 }
 
 .industrial-navbar {
-  background-color: $home-primary-color;
+  background-color: linear-gradient(to bottom, #333333, rgba(51, 51, 51, .4) 98%), linear-gradient(to bottom, #202020, #202020);
   font-family: Arial, sans-serif;
   font-size: 14px;
   position: static;
@@ -52,6 +52,28 @@ $breakpoint-large: 1400px;
       padding: 0 15px;
       height: 56px;
     }
+    .nav-right {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      padding: 12px;
+      margin-left: 24px;
+
+      @media (max-width: $breakpoint-laptop) {
+        display: none;
+      }
+
+      .brands, .about-us {
+        button {
+          color: #e0e0e0;
+          border: none;
+        }
+      }
+
+      span {
+        color: #e0e0e0;
+      }
+    }
 
     .all-products-dropdown {
       //margin-left: 255px;
@@ -67,7 +89,7 @@ $breakpoint-large: 1400px;
         border: none;
         padding: 0 15px;
         cursor: pointer;
-        font-size: 1.2rem;
+        font-size: 1rem;
         height: 64px;
         display: flex;
         align-items: center;
@@ -296,8 +318,8 @@ $breakpoint-large: 1400px;
 
   .dropdown-overlay {
     position: relative;
-    padding-left: 275px;
-    padding-right: 275px;
+    padding-left: 125px;
+    padding-right: 125px;
     z-index: 999;
     background-color: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(5px);
@@ -332,7 +354,7 @@ $breakpoint-large: 1400px;
       .categories-list {
         padding-top: 25px;
         min-width: 310px;
-        background-color: #003366;
+        background-color: $home-primary-color;
         color: white;
 
         @media (max-width: $breakpoint-mobile) {
