--- a/src/app/ui/components/order/order-summary/order-summary.component.scss
+++ b/src/app/ui/components/order/order-summary/order-summary.component.scss
@@ -1,4 +1,17 @@
-// order-summary.component.scss
+$home-primary-color: #333333;
+$home-secondary-color: #f0f0f0;
+$accent-color: #ff9900;
+$home-text-color: #333;
+$light-text: #fff;
+$primary-color: #e53935;
+$secondary-color: #212121;
+$background-color: #ffffff;
+$text-color: #484848;
+$border-color: #e0e0e0;
+$hover-color: rgba($primary-color, 0.1);
+$success-color: #059669;
+$link-color: #0000ee;
+
 .order-summary-page {
   background-color: #f8fafc;
   padding: 2rem 0;
