--- a/src/app/ui/components/order/order.component.scss
+++ b/src/app/ui/components/order/order.component.scss
@@ -1,4 +1,4 @@
-$home-primary-color: #003366;
+$home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
 $home-text-color: #333;
@@ -9,12 +9,12 @@ $background-color: #ffffff;
 $text-color: #484848;
 $border-color: #e0e0e0;
 $hover-color: rgba($primary-color, 0.1);
-$success-color: #00a046;
+$success-color: #059669;
 $link-color: #0000ee;
 
 // Status Colors
 $status-warning: #ffa726;  // Turuncu-sarı
-$status-success: #4caf50;  // Yeşil
+$status-success: #059669;  // Yeşil
 $status-danger: #e53935;   // Kırmızı
 $status-info: #2196f3;     // Mavi
 
