--- a/src/app/ui/components/user/user.component.scss
+++ b/src/app/ui/components/user/user.component.scss
@@ -1,7 +1,7 @@
 // user.component.scss
 
 // Variables
-$home-primary-color: #003366;
+$home-primary-color: #333333;
 $home-secondary-color: #f0f0f0;
 $accent-color: #ff9900;
 $home-text-color: #333;
@@ -12,7 +12,7 @@ $background-color: #ffffff;
 $text-color: #484848;
 $border-color: #e0e0e0;
 $hover-color: rgba($primary-color, 0.1);
-$success-color: #00a046;
+$success-color: #059669;
 $link-color: #0000ee;
 
 // Mixins
